# app-hyperliquid

./: .gitignore  .gitmodules  APP_SPECIFICATION.md  CHANGELOG.md  Makefile  README.md
.clusterfuzzlite/: build.sh
.github/workflows/: misspellings_checks.yml
doc/: architecture.md  cryptography.md  signing_flow.md
fuzzing/: CMakeLists.txt  README.md
fuzzing/harness/: fuzz_action.c  fuzz_action_metadata.c  fuzz_dummy.c
fuzzing/macros/: exclude_macros.txt
src/: action.c  action.h  action_metadata.c  action_metadata.h  action_type.h  app_main.c  approve_builder_fee.c  approve_builder_fee.h  bulk_cancel.c  bulk_cancel.h  bulk_modify.c  bulk_modify.h  bulk_order.c  bulk_order.h  constants.h  eip712_builder_fee.c  eip712_builder_fee.h  eip712_cid.c  eip712_cid.h  eip712_common.c  eip712_common.h  globals.h  hl_context.c  hl_context.h  order.c  order.h  order_request.c  order_request.h  update_isolated_margin.c  update_isolated_margin.h  update_leverage.c  update_leverage.h
src/apdu/: dispatcher.c  dispatcher.h
src/handler/: get_addr.c  get_addr.h  provide_action_metadata.c  provide_action_metadata.h  set_action.c  set_action.h  sign_action.c  sign_action.h
src/ui/: common.c  display.h  display_action.c  display_action.h  menu_nbgl.c  op_cancel.c  op_cancel.h  op_close.c  op_close.h  op_modify.c  op_modify.h  op_order.c  op_order.h  op_update_margin.c  op_update_margin.h  operation.c  operations.h  ui_common.h  ui_context.h
src_msgpack/: cmp.c  cmp.h
tests/application_client/: action_metadata.py  action_type.py  approve_builder_fee.py  bulk_cancel.py  bulk_modify.py  bulk_order.py  command_sender.py  keychain.py  order.py  order_request.py  pki_client.py  response_unpacker.py  set_action.py  setup.cfg  tlv.py  update_isolated_margin.py  update_leverage.py
tests/application_client/keychain/: action_metadata.pem
tests/standalone/: requirements.txt  test_errors.py  test_full_flow.py  test_get_addr.py  test_metadata.py  test_set_action.py
unit-tests/: CMakeLists.txt  ser_helpers.h  test_action.c  test_approve_builder_fee.c  test_bulk_cancel.c  test_bulk_modify.c  test_bulk_order.c  test_dummy.c  test_hl_context.c  test_order_request.c  test_update_isolated_margin.c  test_update_leverage.c  tlv_helpers.h
unit-tests/stubs/: app_config.h  bolos_target.h  cx.h  cx_stubs.c  eip712_stubs.c  os_utils_stubs.c
